--- a/wercker.yml
+++ b/wercker.yml
@@ -21,13 +21,13 @@ build:
     # http://devcenter.wercker.com/docs/steps/index.html
   steps:
     - script:
-        name: search Guile
+        name: update apt
         code: |
-          sudo apt-cache search guile
+          sudo apt-get update
     - script:
         name: install Guile
         code: |
-          sudo apt-get install guile-2.0
+          sudo apt-get install -y guile-2.0
     - script:
         name: perform test
         code: |
