add file test/02-path-building.scm

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,5 +1,10 @@
 
 all: check
 
-check:
+check: 01-simple 02-path-building
+
+01-simple:
 	guile -L ../lib -s ./01-simple.scm
+
+02-path-building:
+	guile -L ../lib -s ./02-path-building.scm
