add test 03-directory-listing

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,10 +1,13 @@
 
 all: check
 
-check: 01-simple 02-path-building
+check: 01-simple 02-path-building 03-directory-listing
 
 01-simple:
-	guile -L ../lib -s ./01-simple.scm
+	guile ./01-simple.scm
 
 02-path-building:
-	guile -L ../lib -s ./02-path-building.scm
+	guile ./02-path-building.scm
+
+03-directory-listing:
+	guile ./03-directory-listing.scm
